--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -984,7 +984,7 @@
 		};
 
 		ipa: ipa@1e00000 {
-			compatible = "qcom,ipa-sdm845";
+			compatible = "qcom,ipa-sdm845-modem_init";
 
 			reg = <0x1e40000 0x34000>,
 			      <0x1e04000 0x2c000>;
